--- a/app/views/ui_indexs/official_images/new.html.erb
+++ b/app/views/ui_indexs/official_images/new.html.erb
@@ -34,7 +34,7 @@
     <span id="deltext"></span>
     <table>
       <td><%= button_to t('activerecord.back_to_index'),ui_indexs_mains_path, :method =>:get  %></td>
-      <td><%= button_to t("activerecord.back_to_list"),search_ui_indexs_products_path(:product_type => @product_type), :method =>:put  %></td>
+      <td><%= button_to t("activerecord.back_to_list"),search_ui_indexs_products_path(:product_type => @product.product_type), :method =>:put  %></td>
     </table>
   </center> 
   <div id="back_page">
