--- a/app/views/ui_indexs/products/edit.html.erb
+++ b/app/views/ui_indexs/products/edit.html.erb
@@ -14,7 +14,7 @@
           <%= form_for @product, :url => ui_indexs_product_path(@product), :html => { :class => :form } do |f| -%>
             <%= render :partial => "form", :locals => {:f => f} %>
           <%end%>
-            <%= button_to  t("activerecord.back_to_list"),search_ui_indexs_products_path(:product_type => @product_type), :method =>:put %>
+            <%= button_to  t("activerecord.back_to_list"),search_ui_indexs_products_path(:product_type => @product.product_type), :method =>:put %>
           </td>
         </tr>
       </table>
